--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "annyang",
-  "version": "2.6.1",
+  "version": "3.0.0-dev",
   "description": "A javascript library for adding voice commands to your site, using speech recognition",
+  "main": "dist/annyang.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TalAter/annyang.git"
+  },
   "keywords": [
     "annyang",
     "annyang.js",
@@ -11,39 +22,10 @@
     "voice",
     "webkitspeechrecognition"
   ],
-  "homepage": "https://www.talater.com/annyang/",
+  "author": "Tal Ater <tal@talater.com> (https://www.talater.com/)",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/TalAter/annyang/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TalAter/annyang.git"
-  },
-  "license": "MIT",
-  "author": "Tal Ater <tal@talater.com> (https://www.talater.com/)",
-  "main": "dist/annyang.min.js",
-  "scripts": {
-    "start": "grunt dev",
-    "test": "grunt test"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "async": "^2.6.1",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^7.0.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-connect": "^2.1.0",
-    "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-imagemin": "^3.1.0",
-    "grunt-contrib-jasmine": "2.1.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-uglify": "^4.0.1",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-markdox": "^1.2.1",
-    "grunt-template-jasmine-istanbul": "^0.5.0",
-    "grunt-template-jasmine-requirejs": "^0.2.3",
-    "load-grunt-tasks": "^4.0.0"
-  }
+  "homepage": "https://www.talater.com/annyang/"
 }
