--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "annyang",
   "version": "3.0.0-dev",
   "description": "A javascript library for adding voice commands to your site, using speech recognition",
-  "main": "dist/annyang.js",
+  "main": "dist/annyang.cjs",
+  "exports": {
+    ".": {
+      "import": "./dist/annyang.mjs",
+      "require": "./dist/annyang.cjs",
+      "default": "./dist/annyang.js"
+    }
+  },
   "directories": {
     "doc": "docs"
   },
   "scripts": {
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,5 +35,9 @@
   "bugs": {
     "url": "https://github.com/TalAter/annyang/issues"
   },
-  "homepage": "https://www.talater.com/annyang/"
+  "homepage": "https://www.talater.com/annyang/",
+  "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.18.0"
+  }
 }
