--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "build": "rollup -c",
+    "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -38,6 +39,7 @@
   "homepage": "https://www.talater.com/annyang/",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
+    "prettier": "^3.2.5",
     "rollup": "^4.18.0"
   }
 }
