--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "scripts": {
     "build": "rollup -c",
+    "dev": "npm-run-all --parallel lint:watch format:watch",
     "format": "prettier --write 'src/**/*.js' 'package.json' '.eslintrc.json' 'rollup.config.mjs'",
+    "format:watch": "chokidar 'src/**/*.js' -c 'npm run format'",
     "lint": "eslint 'src/**/*.js'",
+    "lint:watch": "chokidar 'src/**/*.js' -c 'npm run lint'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -40,11 +43,13 @@
   "homepage": "https://www.talater.com/annyang/",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
+    "chokidar-cli": "^3.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rollup": "^4.18.0"
   }
