--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "linebreak-style": 0,
     "quotes": 0,
     "no-console": "off",
-    "max-len": ["error", { "code": 120 }]
+    "max-len": ["error", { "code": 120 }],
+    "func-names": ["warn", "as-needed"]
   }
 }
