--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "lint:docs": "documentation lint src/annyang.js",
     "lint:src": "eslint 'src/**/*.js'",
     "lint:watch": "chokidar 'src/**/*.js' -c 'npm run lint'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "chokidar-cli": "^3.0.0",
+    "corti": "^1.0.0",
     "documentation": "^14.0.3",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -65,7 +66,8 @@
     "prettier": "^3.3.2",
     "rollup": "^4.18.0",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^1.1.1"
+    "rollup-plugin-serve": "^1.1.1",
+    "vitest": "^1.6.0"
   },
   "packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2"
 }
