--- a/package.json
+++ b/package.json
@@ -34,15 +34,11 @@
   "directories": {
     "doc": "docs"
   },
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ],
+  "files": ["dist", "LICENSE", "README.md"],
   "scripts": {
     "build": "rollup -c",
-    "serve": "rollup -c -w",
-    "dev": "npm-run-all --parallel lint:watch format:watch serve",
+    "build:watch": "rollup -c -w",
+    "dev": "npm-run-all --parallel lint:watch format:watch build:watch",
     "docs": "documentation build src/annyang.js -f md -o docs/README.md",
     "format": "prettier --write 'src/**/*.js' 'package.json' '.eslintrc.json' 'rollup.config.mjs'",
     "format:watch": "chokidar 'src/**/*.js' -c 'npm run format'",
