--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,13 @@
     "no-console": "off",
     "max-len": ["error", { "code": 120, "ignoreComments": true }],
     "func-names": ["warn", "as-needed"]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["test/**/*.js"],
+      "rules": {
+        "max-len": "off"
+      }
+    }
+  ]
 }
